--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,6 @@
-
 [build]
-  base = "client"
   command = "npm run build"
-  publish = "client/dist"
+  publish = "dist"
 
 [build.environment]
   NODE_VERSION = "18"
